Fixed navbar vs content overlap css issue.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -12,3 +12,7 @@
   width: 100%;
   border-radius: 5px;
 }*/
+
+.show-grid {
+  padding-top: 5em;
+}
