--- a/src/components/UserTripSelection/UserTripSelection.css
+++ b/src/components/UserTripSelection/UserTripSelection.css
@@ -373,7 +373,7 @@
     -webkit-transform: rotate(1turn);
   }
 }
-body {
+/*body {
   color: #333;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
@@ -388,7 +388,7 @@ a {
 a:hover {
   text-decoration: underline;
 }
-/*.container {
+.container {
   margin-left: auto;
   margin-right: auto;
   max-width: 400px;
@@ -546,6 +546,7 @@ h6,
 }
 .section {
   margin-bottom: 40px;
+  padding-top: 5em;
 }
 .hint {
   font-size: .85em;
